syntax = "proto3";

package payment.v1;

import "google/protobuf/timestamp.proto";
import "google/api/annotations.proto";
import "google/protobuf/struct.proto";

option go_package = "payment/v1;paymentv1";

// ==== Service ====

service Payment {
  rpc CreatePayment(CreatePaymentRequest) returns (CreatePaymentResponse) {
    option (google.api.http) = {
      post: "/v1/payments"
      body: "*"
    };
  }

  rpc RefundPayment(RefundPaymentRequest) returns (RefundPaymentResponse) {
    option (google.api.http) = {
      post: "/v1/payments/refund"
      body: "*"
    };
  }

  rpc GetPayment(GetPaymentRequest) returns (GetPaymentResponse) {
    option (google.api.http) = {
      get: "/v1/payments/{payment_id}"
    };
  }

  rpc GetPaymentStatus(GetPaymentStatusRequest) returns (GetPaymentStatusResponse) {
    option (google.api.http) = {
      get: "/v1/payments/{payment_id}/status"
    };
  }

  rpc SuccessPayment(SuccessPaymentRequest) returns (SuccessPaymentResponse) {
    option (google.api.http) = {
      post: "/v1/payments/success"
      body: "*"
    };
  }

  rpc ListPayments(ListPaymentsRequest) returns (ListPaymentsResponse) {
    option (google.api.http) = {
      get: "/v1/payments"
    };
  }

  rpc HealthCheck(HealthCheckRequest) returns (HealthCheckResponse) {
    option (google.api.http) = {
      get: "/v1/health"
    };
  }
}

// ==== Messages ====

message CreatePaymentRequest {
  string order_id = 1;
  string user_id = 2;
  double amount = 3;
  string currency = 4;
  string return_url = 5;
  string error_url = 6;
  string operation = 7; // вместо enum OperationType
  string description = 8;
  google.protobuf.Struct metadata = 9;
}

message CreatePaymentResponse {
  string payment_id = 1;
  string payment_url = 2;
}

message RefundPaymentRequest {
  string payment_id = 1;
  string reason = 2;
}

message RefundPaymentResponse {
  string status = 1; // вместо enum PaymentStatus
}

message GetPaymentRequest {
  string payment_id = 1;
}

message GetPaymentResponse {
  string payment_id = 1;
  string order_id = 2;
  string user_id = 3;
  double amount = 4;
  string currency = 5;
  string status = 6; // вместо enum PaymentStatus
  google.protobuf.Timestamp created_at = 7;
  string operation = 8; // вместо enum OperationType
  string broker = 9;
  google.protobuf.Struct metadata = 10;
}

message GetPaymentStatusRequest {
  string payment_id = 1;
}

message GetPaymentStatusResponse {
  string status = 1; // вместо enum PaymentStatus
}

message SuccessPaymentRequest {
  string payment_id = 1;
}

message SuccessPaymentResponse {
  string status = 1; // вместо enum PaymentStatus
}

message ListPaymentsRequest {
  int32 page = 1;
  int32 page_size = 2;
  string user_id = 3;
}

message ListPaymentsResponse {
  repeated GetPaymentResponse payments = 1;
  int32 total = 2;
}

// ==== HealthCheck ====

message HealthCheckRequest {}

message HealthCheckResponse {
  bool database_ok = 1;
  bool broker_ok = 2;
  google.protobuf.Timestamp checked_at = 3;
}
